# oeAware-manager

./: CMakeLists.txt  README.en.md  README.md  build.sh  config.yaml  info_cmd.yaml  install.sh  oeAware.service  oeAware.spec  oeaware.service  preload.yaml  uninstall.sh
src/client/: CMakeLists.txt  arg_parse.cpp  arg_parse.h  client.cpp  client.h  cmd_handler.cpp  cmd_handler.h  main.cpp  tcp_socket.cpp  tcp_socket.h
src/client/analysis/: CMakeLists.txt  analysis_cli.cpp  analysis_cli.h  analysis_report.cpp  analysis_report.h  config.cpp  config.h  table.cpp  table.h
src/common/: CMakeLists.txt  base_data.cpp  base_data.h  data_list.h  data_register.cpp  data_register.h  default_path.h  domain_socket.cpp  domain_socket.h  event.h  instance_run_message.h  interface.h  logger.cpp  logger.h  manager_callback.cpp  manager_callback.h  message.h  message_protocol.cpp  message_protocol.h  safe_queue.h  serialize.h  topic.h  utils.cpp  utils.h
src/plugin/: CMakeLists.txt
src/plugin/collect/docker/: CMakeLists.txt  docker_adapt.cpp  docker_adapt.h  docker_collector.cpp
src/plugin/collect/include/: command_data.h  docker_data.h  kernel_data.h  pmu_count_data.h  pmu_counting_data.h  pmu_sampling_data.h  pmu_spe_data.h  pmu_uncore_data.h  thread_info.h
src/plugin/collect/pmu/: CMakeLists.txt  pmu_collector.cpp  pmu_collector.h  pmu_common.cpp  pmu_common.h  pmu_counting_collector.cpp  pmu_counting_collector.h  pmu_counting_data.cpp  pmu_counting_data.h  pmu_l3c_collector.cpp  pmu_l3c_collector.h  pmu_sampling_collector.cpp  pmu_sampling_collector.h  pmu_sampling_data.cpp  pmu_spe_collector.cpp  pmu_spe_collector.h  pmu_spe_data.cpp  pmu_uncore.cpp  pmu_uncore.h  pmu_uncore_collector.cpp  pmu_uncore_collector.h  pmu_uncore_data.cpp
src/plugin/collect/pmu/plugin/: plugin.c  plugin_comm.c  plugin_comm.h  plugin_counting.c  plugin_counting.h  plugin_napi_gro_receive_entry.c  plugin_napi_gro_receive_entry.h  plugin_netif_rx.c  plugin_netif_rx.h  plugin_sampling.c  plugin_sampling.h  plugin_skb_copy_datagram_iovec.c  plugin_skb_copy_datagram_iovec.h  plugin_spe.c  plugin_spe.h  plugin_uncore.c  plugin_uncore.h  pmu_uncore.c  pmu_uncore.h
src/plugin/collect/pmu/plugin_new/: pmu_count.cpp  pmu_count.h
src/plugin/collect/system/: CMakeLists.txt  env_info.cpp  env_info.h  kernel_config.cpp  kernel_config.h  kernel_data.cpp  system_collector.cpp  thread_collector.cpp  thread_collector.h
src/plugin/collect/system/command/: command_base.cpp  command_base.h  command_collector.cpp  command_collector.h  iostat_collector.cpp  iostat_collector.h  mpstat_collector.cpp  mpstat_collector.h  vmstat_collector.cpp  vmstat_collector.h
src/plugin/collect/system/net_interface/: net_interface.cpp  net_interface.h  net_intf_comm.cpp  net_intf_comm.h
src/plugin/collect/system/thread/: thread_collector.cpp  thread_collector.h
src/plugin/collect/system_collector/: CMakeLists.txt  thread_collector.cpp  thread_collector.h
src/plugin/collect/thread_collector/: CMakeLists.txt  thread_collector.cpp
src/plugin/scenario/analysis/: CMakeLists.txt  analysis_oeaware.cpp
src/plugin/scenario/analysis/adapt/: analysis_aware.cpp  analysis_aware.h  oeaware_adapt.cpp
src/plugin/scenario/analysis/analysis/: analysis.cpp  analysis.h  analysis_compose.h  common.cpp  common.h  env.cpp  env.h  huge_detect.cpp  huge_detect.h  memory_analysis.cpp  memory_analysis.h
src/plugin/scenario/analysis/common/: analysis_utils.cpp  analysis_utils.h
src/plugin/scenario/analysis/docker_coordination_burst/: docker_coordination_burst_analysis.cpp  docker_coordination_burst_analysis.h
src/plugin/scenario/analysis/dynamic_smt/: dynamic_smt_analysis.cpp  dynamic_smt_analysis.h
src/plugin/scenario/analysis/hugepage/: hugepage_analysis.cpp  (+3 more)
src/plugin/scenario/include/: adapt_data.h
src/plugin/scenario/thread_aware/: CMakeLists.txt  thread_aware.cpp  thread_aware.h
src/plugin/tune/docker/: CMakeLists.txt  cpu_burst.cpp  cpu_burst.h  cpu_burst_adapt.cpp  cpu_burst_adapt.h  docker_adapt.cpp
src/plugin/tune/hwprobe/: CMakeLists.txt  hwprobe_tune.cpp
src/plugin/tune/smc_tune/: CMakeLists.txt  smc_netlink.cpp  smc_tune.cpp  smc_ueid.cpp  smc_ueid.h
src/plugin/tune/stealtask_tune/: CMakeLists.txt  stealtask_tune.cpp  stealtask_tune.h
src/plugin/tune/system/: CMakeLists.txt  system_tune.cpp
src/plugin/tune/thread_tune/: CMakeLists.txt
src/plugin/tune/ub_tune/: CMakeLists.txt  ub_tune.cpp  ub_tune.h
src/plugin/tune/unixbench/: CMakeLists.txt  ub_tune.cpp  ub_tune.h
src/plugin_mgr/: CMakeLists.txt  config.cpp  config.h  dep_handler.cpp  dep_handler.h  error_code.cpp  error_code.h  instance_run_handler.cpp  instance_run_handler.h  interface.h  logger.cpp  logger.h  main.cpp  memory_store.h  message_manager.cpp  message_manager.h  plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h
src/plugin_mgr/event/: disable_handler.cpp  disable_handler.h  download_handler.cpp  download_handler.h  enable_handler.cpp  enable_handler.h  error_code.cpp  error_code.h  event.h  event_handler.h  info_cmd_handler.cpp  info_cmd_handler.h  list_handler.cpp  list_handler.h  load_handler.cpp  load_handler.h  publish_handler.cpp  publish_handler.h  query_dep_handler.cpp  query_dep_handler.h  query_handler.cpp  query_handler.h  query_subscribe_graph.cpp  query_subscribe_graph.h  reload_conf_handle.cpp  reload_conf_handle.h  remove_handler.cpp  remove_handler.h  subscribe_handler.cpp  subscribe_handler.h  unsubscribe_handler.cpp  unsubscribe_handler.h
src/sdk/: CMakeLists.txt  oe_client.cpp  oe_client.h
tests/: CMakeLists.txt  analysis_report_test.cpp  ci_test.sh  data_register_test.cpp  logger_test.cpp  pmu_count_test.cpp  realtime_tune_test.cpp  safe_queue_test.cpp  sdk_test.cpp  serialize_test.cpp  table_test.cpp  utils_test.cpp  xcall_tune_test.cpp
tests/ST/sdk/: CMakeLists.txt  main.cpp  test_env_info.cpp  test_inc.h  test_net_hirq.cpp  test_net_intf.cpp  test_pmu.cpp
tests/ST/xcall/: CMakeLists.txt  main.cpp
tests/workload/net_irq/: get_irq_with_desc.cpp
tests/workload/read_proc_stat/: read_proc_stat.cpp
(+167 files in other folders)
